<resources>
	<string name="app_ok">OK</string>
	<string name="app_cancel">Cancel</string>
	<string name="app_home">Home</string>
	<string name="app_refresh">Refresh</string>
	<string name="app_details">Details</string>
	<string name="app_share">Share</string>
	<string name="app_loading">Loading&#8230;</string>
	<string name="app_legal">By using this application you agree with the terms of the RateBeer User Agreement available at http://www.ratebeer.com/UserAgreement.asp\n\nEven without a RateBeer account you can use this application to view beer details, top lists, upcoming events, local beer-releated places and much more. For the full feature set, like rating beers and adding beer availability, you can create an account at http://www.ratebeer.com/NewUser.asp</string>
	<string name="app_legal_title">Welcome!</string>
	<string name="app_install">Install now</string>
	<string name="app_nomarket">The Play Store is not installed on your device.</string>
	<string name="app_scannernotfound">The barcode scanner can not be found.\nWould you like to install this from the Play Store?</string>
	<string name="app_notsupported">Your barcode scanner app is not supported, sorry.</string>
	<string name="app_onlyifsignedin">This feature is only available after signing in to RateBeer.</string>
	<string name="app_newstatus">Enter new status</string>
	<string name="app_nowdrinking">Now drinking</string>
	<string name="app_settingdrinking_expl">You can also choose \'Drinking this\' from a beer\'s details screen.</string>
	<string name="app_settingdrinking">Setting drinking status</string>
	<string name="app_sharerating">Share rating on Twitter/Facebook/&#8230;</string>
	<string name="app_postingrating">Posting beer rating</string>
	<string name="app_postingtick">Posting your tick</string>
	<string name="app_removingtick">Removing your tick</string>
	<string name="app_addingavailability">Publishing availability</string>
	<string name="app_addingforbeer">Adding availability for %1$s</string>
	<string name="app_rated">Rated %1$s with a %2$s</string>
	<string name="app_forbeer">For %1$s</string>
	<string name="app_addingtocellar">Adding to cellar</string>
	<string name="app_addwant">I want %1$s</string>
	<string name="app_addhave">I have %1$s</string>
	<string name="app_ratedwithurl">Rated %2$s with a %3$s http://www.ratebeer.com/beer/b/%1$s/%4$s/ #RateBeerForAndroid</string>
	<string name="app_addingupccode">Adding scanned barcode to beer</string>
	<string name="app_addingcodefor">Adding code to %1$s</string>
	<string name="app_requiressignin">Please sign in to your RateBeer account to use this feature.</string>
	<string name="app_noaccount">No account?\nhttp://www.ratebeer.com/NewUser.asp</string>
	<string name="app_newmail">You\'ve got new beer mail</string>
	<string name="app_newmails">%1$s new beer mails</string>
	<string name="app_by">By %1$s</string>
	<string name="app_andothers"> and others</string>
	<string name="app_moremail">+%1$s more</string>
	<string name="app_uploadingphoto">Uploading new photo</string>
	<string name="app_photofor">Uploading photo for %1$s</string>
	<string name="signin_username">Username:</string>
	<string name="signin_password">Password:</string>
	<string name="signin_signin">Sign in</string>
	<string name="signin_signout">Sign out</string>
	<string name="signin_connecting">Connecting&#8230;</string>
	<string name="signin_signoutsuccess">Successfully signed out</string>
	<string name="signin_signinsuccess">Successfully signed in</string>
	<string name="home_beers">Beers</string>
	<string name="home_places">Places</string>
	<string name="home_events">Events</string>
	<string name="home_search">Search</string>
	<string name="home_myprofile">My profile</string>
	<string name="home_top50">Top 50</string>
	<string name="home_bycountry">Best by country</string>
	<string name="home_offlineratings">Offline notes</string>
	<string name="home_customlists">Custom lists</string>
	<string name="home_beerstyles">Beer styles</string>
	<string name="home_beermail">Beermail</string>
	<string name="home_nowdrinking">Now drinking %1$s</string>
	<string name="home_preferences">Preferences</string>
	<string name="home_calculator">Calculator</string>
	<string name="home_about">About</string>
	<string name="calc_clear">X</string>
	<string name="calc_for">%1$s for</string>
	<string name="calc_euro">¤</string>
	<string name="calc_cent">¢</string>
	<string name="calc_to_from">↑</string>
	<string name="calc_from_to">↓</string>
	<string name="calc_fillinall">Please fill in quality fields and one of the beer prices first</string>
	<string name="myratings_avg">%1$s avg.</string>
	<string name="myratings_noitems">No ratings yet; open up a beer and start those taste buds!</string>
	<string name="myratings_sortby">Sort by</string>
	<string-array name="myratings_sortby_names">
		<item>Name</item>
		<item>Brewer</item>
		<item>Style</item>
		<item>My rating</item>
		<item>Date</item>
		<item>Score</item>
	</string-array>
	<string name="ticks_viewticks">View ticks</string>
	<string name="ticks_noitems">No ticks yet; open up a beer and start those taste buds!</string>
	<string name="cellar_viewcellar">View cellar</string>
	<string name="custom_nolists">Create a custom beer list using the + button in the top</string>
	<string name="custom_noitems">Add beers using the + button or from any beer details screen</string>
	<string name="custom_newlist">New list</string>
	<string name="custom_addbeer">Add beer</string>
	<string name="custom_deletelist">Delete list</string>
	<string name="custom_confirmdeletelist">Delete the whole list %1$s?</string>
	<string name="custom_removebeer">Remove from list</string>
	<string name="custom_confirmremovebeer">Remove %1$s from the list?</string>
	<string name="custom_listname">List name</string>
	<string name="custom_notavailable">Custom lists currently not available</string>
	<string name="custom_nonamegiven">Please enter the name of the beer to add to the list</string>
	<string-array name="custom_sortby_names">
		<item>Name</item>
		<item>Brewer</item>
		<item>Score</item>
		<item>Date added</item>
	</string-array>
	<string name="cellar_viewticks">View ticks</string>
	<string name="cellar_wants">Wants</string>
	<string name="cellar_haves">Haves</string>
	<string name="cellar_wantthis">Want this</string>
	<string name="cellar_havethis">Have this</string>
	<string name="cellar_addingahave">Adding a have</string>
	<string name="cellar_addingawant">Adding a want</string>
	<string name="cellar_memo">Memo</string>
	<string name="cellar_vintage">Vintage (year)</string>
	<string name="cellar_quantity">Quantity</string>
	<string name="cellar_addtocellar">Add to cellar</string>
	<string name="cellar_remove">Remove from cellar</string>
	<string name="cellar_confirmremoval">Remove %1$s from your cellar?</string>
	<string name="topbeers_country">Country:</string>
	<string name="topbeers_state">State:</string>
	<string name="topbeers_noitems">Select a country to view its top beers&#8230;</string>
	<string name="places_nearby">Places nearby</string>
	<string name="places_map">Map</string>
	<string name="places_location">Location</string>
	<string name="places_rateandcount">Rating: %1$s</string>
	<string name="places_notyetrated">Not yet rated</string>
	<string name="places_findhint">Type the name of the search location</string>
	<string name="places_usecurrent">Use your current location</string>
	<string name="places_noitems">No beer places found in this area!</string>
	<string name="places_brewpub">Brewpub</string>
	<string name="places_bar">Bar</string>
	<string name="places_beerstore">Beer store</string>
	<string name="places_restaurant">Restaurant</string>
	<string name="places_brewer">Brewer</string>
	<string name="places_unknown">Unknown</string>
	<string name="places_km">km</string>
	<string name="places_m">m</string>
	<string name="places_checkins">Check ins</string>
	<string name="places_checkinhere">Check in here</string>
	<string name="places_checkedinnow">You have checked in (now refreshing)</string>
	<string name="places_availablebeers">Available</string>
	<string name="places_enteredat">Entered at %1$s</string>
	<string name="places_share">Check out %1$s at @ratebeer http://ratebeer.com/Place/p/p/p/%2$s.htm</string>
	<string name="places_shareplace">Share place&#8230;</string>
	<string name="brewers_share">Check out %1$s at @ratebeer http://www.ratebeer.com/brewers/b/%2$s/</string>
	<string name="brewers_sharebrewer">Share brewer&#8230;</string>
	<string name="brewers_beers">Beers</string>
	<string name="brewers_facebook">Facebook</string>
	<string-array name="brewers_sortby_names">
		<item>Name</item>
		<item>Number of ratings</item>
		<item>Score</item>
	</string-array>
	<string name="events_attendees">Attendees:</string>
	<string name="events_noitems">No events planned in this area!</string>
	<string name="events_addattendance">Yes, add my name</string>
	<string name="events_removeattendance">No, remove my name</string>
	<string name="events_nowattending">Added my name to the attendants list</string>
	<string name="events_nownotattending">Removed my name from the attendants list</string>
	<string name="events_share">Check out %1$s at @ratebeer http://ratebeer.com/event/%2$s/</string>
	<string name="events_shareevent">Share event&#8230;</string>
	<string name="search_resultsfor">Results for \'%1$s\'</string>
	<string name="search_beersearch">RateBeer search</string>
	<string name="search_hint">Search beers, places &amp; users</string>
	<string name="search_beers">Beers</string>
	<string name="search_brewers">Brewers</string>
	<string name="search_barcodescanner">Barcode scanner</string>
	<string name="details_myrating">My rating:</string>
	<string name="details_ticklabel">Or just tick:</string>
	<string name="details_otherratings">Recent ratings:</string>
	<string name="rate_aroma">Aroma</string>
	<string name="rate_appearance">Appearance</string>
	<string name="rate_taste">Taste</string>
	<string name="rate_palate">Palate</string>
	<string name="rate_overall">Overall</string>
	<string name="rate_totalscore">Total score</string>
	<string name="rate_comments">Comments</string>
	<string name="rate_showassistance">Show assistance</string>
	<string name="rate_assistance_words">caramel, bread, hay, cereal, chocolate, coffee, nuts, toast, roasty, resin, floral, grass, spruce, citrus, herbs, dough, barnyard, cheese, basement aromas, leather, earthy, leaves, alcohol, banana, bubblegum, butterscotch, clove, cooked vegetables, cough drop, ginger, licorice, raisin, rotten eggs, soy sauce, skunky, smoke, vanilla, woody</string>
	<string name="rate_offline_customname">Beer you are rating:</string>
	<string name="addav_addavailability">Add availability</string>
	<string name="addav_find">Find</string>
	<string name="addav_on">On:</string>
	<string name="addav_ontap">tap</string>
	<string name="addav_onbottlecan">bottle/can</string>
	<string name="addav_skip">Skip</string>
	<string name="mail_sendto">Send to:</string>
	<string name="mail_subject">Subject:</string>
	<string name="mail_message">Message:</string>
	<string name="mail_send">Send</string>
	<string name="settings_display">Display preferences</string>
	<string name="settings_distanceinkm">Show distances in km</string>
	<string name="settings_distanceinkm_info">Distances shown in miles otherwise</string>
	<string name="settings_sharetext">Text when sharing a rating</string>
	<string name="settings_sharetext_msg">Placeholders: %1$s for beer ID, %2$s for beer name, %3$s for total score and %4$s for your user ID</string>
	<string name="settings_beermail">Beermail</string>
	<string name="settings_background">Enable notifications</string>
	<string name="settings_background_info">Periodically check for new beermail</string>
	<string name="settings_updatefrequency">Update frequency</string>
	<string name="settings_vibrate">Vibrate on notification</string>
	<string name="error_sendreport">Send error report</string>
</resources>