<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	
	<item 
		android:id="@+id/menu_search" 
		android:title="@string/home_search"
		android:icon="@drawable/ic_action_search"
		android:showAsAction="ifRoom" />

	<item 
		android:id="@+id/menu_scanbarcode" 
		android:title="@string/search_barcodescanner"
		android:icon="@drawable/ic_action_barcode"
		android:showAsAction="ifRoom" />
	
	<item 
		android:id="@+id/menu_calculator" 
		android:title="@string/home_calculator"
		android:icon="@drawable/ic_menu_calculator"
		android:showAsAction="ifRoom"
		android:orderInCategory="9901" />
	
	<item 
		android:id="@+id/menu_preferences" 
		android:title="@string/home_preferences"
		android:icon="@android:drawable/ic_menu_preferences"
		android:orderInCategory="9902" />
	
	<item 
		android:id="@+id/menu_sendreport" 
		android:title="@string/error_sendreport"
		android:icon="@android:drawable/ic_menu_send"
		android:showAsAction="never"
		android:orderInCategory="9903" />
	
	<item 
		android:id="@+id/menu_about" 
		android:title="@string/home_about"
		android:icon="@android:drawable/ic_menu_info_details"
		android:showAsAction="never"
		android:orderInCategory="9904" />
	
</menu>