<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:app="http://schemas.android.com/apk/res/com.ratebeer.android"
	android:layout_width="match_parent" 
	android:layout_height="match_parent"
	android:orientation="vertical">
	
	<com.viewpagerindicator.TabPageIndicator
		android:id="@+id/titles" 
		android:layout_height="wrap_content"
		android:layout_width="fill_parent" />

	<android.support.v4.view.ViewPager
		android:id="@+id/pager" 
		android:layout_width="fill_parent"
		android:layout_height="0dp" 
		android:layout_weight="1" />
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
<<<<<<< HEAD
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/addav_on" />
		<CheckBox
			android:id="@+id/onbottlecan"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="2.5"
			android:text="@string/addav_onbottlecan" />
		<CheckBox
			android:id="@+id/ontap"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:text="@string/addav_ontap" />
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
=======
>>>>>>> 9cb2b20cee7ae90e7a5ea61c0ebff4e0c86a6dd6
		android:layout_margin="10dip"
		android:orientation="horizontal">
		<Button
			android:id="@+id/addavailability"
			android:layout_height="wrap_content"
			android:layout_width="0dip"
			android:layout_weight="1"
			android:text="@string/addav_addavailability" />
		<Button
			android:id="@+id/skip"
			android:layout_height="wrap_content"
			android:layout_width="0dip"
			android:layout_weight="1"
			android:text="@string/addav_skip"
			android:layout_marginLeft="10dip" />
	</LinearLayout>
	
</LinearLayout>
