<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="300dip"
	android:layout_height="wrap_content"
	android:padding="10dip">
	
	<Button 
		android:id="@+id/find"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_alignParentRight="true"
		android:text="@string/addav_find" />
	
	<EditText 
		android:id="@+id/query"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_toLeftOf="@id/find"
		android:layout_alignParentLeft="true"
		android:hint="@string/places_findhint"
		android:inputType="textFilter" />
	
	<Button 
		android:id="@+id/currentlocation"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_below="@id/query"
		android:text="@string/places_usecurrent" />
	
</RelativeLayout>
